# HS_kick_generator

./: .gitattributes  .gitignore  README.md  pipeline_test.kick.json  pipeline_test2.kick.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: kick_rave.gin
examples/: basic_hardstyle.py
kickgen/: __init__.py  blocks.py  channel.py  pipeline.py  registry.py
kickgen_gui/: __init__.py  audio.py  block_window.py  channel_window.py  kicksynth_window.py  main.py  pipeline_window.py  serialization.py
models/: kick_vae.py
scripts/: batch_review.py  download_checkpoint.sh  download_plots.sh  export.py  generate.py  interpolate.py  join_file.py  mel_audition.py  prepare_for_ssh.py  preprocess.py  review_samples.py  split_file.py  train.py  train_vae.py  upload_kicks.sh  upload_kicks_chunks.sh  upload_prepared.sh  upload_raw.sh  vocode.py
tests/: test_blocks.py  test_channel.py  test_gui.py  test_pipeline.py
