[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kickgen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.11"]

[project.optional-dependencies]
audio = ["soundfile>=0.12"]
fast  = ["numba>=0.57"]
dev   = ["pytest>=7"]
gui   = ["PySide6>=6.5", "sounddevice>=0.4"]

[project.scripts]
kickgen-gui = "kickgen_gui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kickgen*"]
